# flockingbird

./: .clang-format  .gitignore  CMakeLists.txt  FB.sln  FB.vcxproj  FB.vcxproj.filters  LICENCE.txt  README.md  test.sh
include/: CMakeLists.txt  flockingbird.cpp
src/: CMakeLists.txt  flock_simulation.cpp  flockingbird.cpp  flockingbird.h  flockingbird.hpp  main.cpp
src/flock_simulation/: boid.h  boid.hpp  configuration.h  configuration.hpp  flock.h  flock.hpp  rules.h  rules.hpp  simulation.h  simulation.hpp
src/nearest_neighbors/: nanoflann.h  neighbor_queries.h  visible_proximity.h  visible_proximity.hpp
src/utility/: random_numbers.h  random_numbers.hpp  vector_operations.h  vector_operations.hpp
tests/: CMakeLists.txt
tests/src/: divider_tests.cpp  flockingbird_tests.cpp
tests/src/flock_simulation/: flock_tests.cpp  rules_tests.cpp  simulation_test.cpp
tests/src/nearest_neighbors/: nanoflann_exploratory_tests.cpp  visible_proximity_tests.cpp
tests/src/utility/: vector_operations_tests.cpp
